# PhenGO

./: README.md  setup.cfg
data/: process_data.py
data/go/: process_go.py
data/go/2015/: GO_Nodes.txt  Ontology_Attributes.txt  Refined_GO_Nodes.txt
data/go/2016/: GO_Nodes.txt  Ontology_Attributes.txt  Refined_GO_Nodes.txt
data/worm/lethal_terms/: get_wb_phenotype_terms.py  lethal_phenotype_terms_with_decendants.tsv  phenotype_ontology.WS250.obo  phenotype_ontology.WS297.obo  root_lethal_phenotype_terms.txt
src/PhenGO/data/worm/: WS297_lethal_terms.tsv
src/PhenGo/: PhenGO.py  PhenoGo_to_ARFF.py  compare_arff_genes.py  constants.py  fly_pheno_summary.py  go_handling.py  obo_to_graph.py  phenotype_handling.py
