[metadata]
name = PhenoGO
version = v0.1.0
license_files = LICENSE
author = Nicholas Dimonaco
author_email = nicholas@dimonaco.co.uk
description = PhenoGO: A tool to build WEKA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickJD/PhenoGO
project_urls =
    Bug Tracker = https://github.com/NickJD/PhenoGO/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True

package_data =
    PhenoGO = data/worm/WS297_lethal_terms.tsv data/mouse/MGI_lethal_terms.tsv data/fly/FlyBase_Fields_2017.txt.gz
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =

[options.packages.find]
where = src
include = *


[options.entry_points]
console_scripts =
#    PyamilySeq = PyamilySeq.PyamilySeq:main
#    pyamilyseq = PyamilySeq.PyamilySeq:main
